Fixed the margin note css
Removing overlaps was surprising easy. Just had to add the clear tag.
Also, I figured out a new sidebar behavior that I like. Keep the aside
flush to the right side of the screen on narrow browser windows, so
partial overlaps can occur between sidebar and content

--- a/styles/everythingbagel.css
+++ b/styles/everythingbagel.css
@@ -177,24 +177,26 @@ aside {
     font-size: .9rem;
     line-height: 1.3;
     float: right;
-    margin-top: 0;
+    clear: right;
+    margin: 0;
     /*100vw is viewport width*/ 
     /*100% is parent's width is viewport width*/
     /*(100vw - 100%) / 2 is therefore the width of one margin*/
-    width: calc((100vw - 100%) / 2  - 5rem); 
-    max-width: 80%;
-    margin-right: calc(max(-80% - 2.5rem, -1 * (100vw - 100%) / 2 + 2.5rem));
+    /*width: calc((100vw - 100%) / 2  - 5rem); 
+    margin-right: calc(max(-50% - 2.5rem, -1 * (100vw - 100%) / 2 + 2.5rem));*/
+    width: 18rem;
+    max-width: 50%;
+    margin-right: max(-22rem, -1 * (100vw - 100%) / 2  + 1rem);
+    margin-left: 1rem;
 }
 
 
 
-@media (max-width: 75rem) {
+@media (max-width: 65rem) {
     aside {
-        width: min(50%, 20rem);
+        padding: 1em;
         background-color: var(--c2);
         border-left: 3px solid var(--c7);  
-        padding: 1em; 
-        margin: 0 0 0 1rem;
     }
 }
 
